ocaml/testsuite/tests/parsetree/test_ppx.compilers.reference
File "source_jane_street.ml", line 161, characters 0-24:
161 | type t = #(int * float#)
      ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name "t".
       Names must be unique in a given structure or signature.
